# AetherGuardAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.aws.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  nginx.conf  quickstart.sh  start-all-services.sh
Whitepaper/: AetherGuard_AI_Whitepaper_WIP.docx  ~$therGuard_AI_Whitepaper_WIP.docx
admin-portal/: Dockerfile  index.html  package.json  vite.config.ts
admin-portal/src/: App.tsx
admin-portal/src/components/: Layout.tsx
admin-portal/src/pages/: AuditLogs.tsx  Dashboard.tsx  Login.tsx  (+2 more)
aws-infrastructure/: cdk.json  package-lock.json  package.json
aws-infrastructure/lib/: aetherguard-stack.ts  analytics-stack.ts  cdn-stack.ts  cicd-pipeline-stack.ts  compute-stack.ts  monitoring-stack.ts  multi-region-stack.ts  network-stack.ts  production-hardening-stack.ts  storage-stack.ts
backend-api/: Dockerfile  aetherguard.db  main.py  requirements.txt  run_migrations.py  start.sh  test_db_connection.py
backend-api/migrations/: 001_initial_schema.sql  002_analytics_schema.sql  003_api_keys_enhancement.sql  006_add_activities.sql  007_add_users_table.sql  add_api_key_enhancements.sql  add_policy_versioning.sql  add_provider_health_and_reports.sql
backend-api/models/: __init__.py  activity.py  admin_user.py  api_key.py  audit_log.py  base.py  llm_provider.py  policy_config.py  security_event.py  tenant.py  usage_analytics.py
backend-api/routers/: __init__.py  activities.py  admin_analytics.py  admin_api_keys.py  admin_auth.py  admin_tenants.py  analytics.py  api_keys.py  llm_providers.py  policies.py  provider_health.py  reports.py  tenant_auth.py
backend-api/utils/: email.py  encryption.py
config/: development.yaml
lambda/analytics/: analytics.py
lambda/audit/: audit.py
lambda/budget/: budget.py
lambda/policy/: policy.py
ml-services/: Dockerfile  README.md  async_database.py  benchmark.py  database.py  fine_tuning.py  main.py  multi_tenant.py  pinecone_integration.py  pinecone_integration_real.py  reporting.py  requirements.txt  setup_test_data.py  sso_integration.py  start.sh  test_database_final.py  test_database_integration.py  test_database_simple.py  test_model_integrity.py  test_new_features.py  train_shadow_ai.py
ml-services/detectors/: __init__.py  adversarial.py  bias.py  brand_safety.py  brand_safety_enhanced.py  dos_protection.py  hallucination.py  injection.py  intent_classifier.py  model_integrity.py  pii.py  secrets.py  shadow_ai.py  toxicity.py  toxicity_enhanced.py  watermark.py
ml-services/models/: __init__.py  model_loader.py
monitoring/: prometheus.yml
nginx/: nginx.conf
nodejs-sdk/: .eslintrc.js  .gitignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json
nodejs-sdk/examples/: advanced-features.js  analytics-monitoring.js  basic-usage.js  security-policies.js  streaming-chat.js
nodejs-sdk/src/: client.ts  index.ts  types.ts  utils.ts
nodejs-sdk/tests/: client.test.ts  integration.test.ts  setup.ts  utils.test.ts
proxy-engine/: .dockerignore  Cargo.toml  Dockerfile  README.md
proxy-engine/src/: audit.rs  crypto.rs  data_residency.rs  database.rs  gdpr_compliance.rs  main.rs  pipeline.rs  policy.rs  policy_loader.rs  qldb_integration.rs  rate_limiter.rs  request_attribution.rs  security.rs  shadow_ai.rs
scripts/: init.sql
src/aethersign/: aethersign.go  attributor.go  keystore.go  signer.go
src/compliance/: audit_service.go
src/dashboard/: alert_manager.go  api.go  metrics_collector.go
src/gateway/: gateway.go
src/input-engine/: engine.go
src/llm-provider/: anthropic_adapter.go  gemini_adapter.go  local_adapter.go  manager.go  openai_adapter.go  provider.go
src/model-integrity/: verification_service.go
src/output-engine/: engine.go
src/policy/: engine.go
src/provider-management/: health_monitor.go
src/request-processor/: error_handler.go  performance_optimizer.go  processor.go
tests/: add-test-data.py  run-all-tests.sh  scan-credentials.sh  test-backend-api.sh  test_advanced_features.py  test_complete_advanced_features.py  test_detections.sh  test_llm_provider_integration.py
web-portal/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
web-portal/src/: App.tsx
(+60 files in other folders)
