[package]
name = "aetherguard-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.10"

# AWS SDK dependencies for production AetherSign
aws-config = "1.1"
aws-sdk-kms = "1.15"
aws-sdk-qldbsession = "1.15"
aws-sdk-qldb = "1.15"
aws-smithy-types = "1.1"

# Real cryptography dependencies
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdsa"] }
ring = "0.17"
ed25519-dalek = "2.0"
x509-parser = "0.15"
pem = "3.0"
base64 = "0.21"

# Performance and caching
dashmap = "5.5"
lru = "0.12"
parking_lot = "0.12"

# Nitro Enclave support (optional)
aws-nitro-enclaves-cose = { version = "0.5", optional = true }
cbor-codec = { version = "0.7", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["aws-production"]
aws-production = ["aws-config", "aws-sdk-kms", "aws-sdk-qldbsession", "aws-sdk-qldb"]
nitro-enclave = ["aws-nitro-enclaves-cose", "cbor-codec"]
local-dev = []
